# immich-apps

./: .cspell.json  .env.example  .envrc  .flake8  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .prettierignore  Dockerfile.line-bot  Dockerfile.planner  Makefile  README.md  eslint.config.mjs  jest.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
apps/planner/: README.md  package.json  tsconfig.json
ci/tekton/: README.md  kustomization.yaml
deploy/manifests/: 1password-items.yaml  immich-configmap.yaml  immich-deployment.yaml  immich-ingress.yaml  immich-loadbalancer.yaml  immich-local-pv.yaml  (+1 more)
docs/: COMPLETION_SUMMARY.md  CURSOR_LINT_FIX_AGENT.md  FIXES_SUMMARY.md  GPU_CONFIGURATION.md  HOW_TO_PROCEED.md  IMMICH_ENHANCEMENT_PROJECT.md  IMMICH_UPGRADE_v2.7.5.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_SUMMARY.md  PHASE2_K8S_DEPLOYMENT.md  PHASE2_LINE_BOT.md  PHASE3_EXTERNAL_LIBRARY_CLEANUP.md  PHASE3_PHOTO_SYNC.md  PHASE3_STORAGE_AUDIT.md  PORT_RANGE_PLAN.md  PROGRESS_TRACKING.md  QUESTIONS_ANSWERED.md  README.md  REPO_ARCHITECTURE_RECOMMENDATION.md  REPO_CONSOLIDATION_PLAN.md
open-api/: immich-openapi-specs.json
scripts/: bootstrap-immich-op-vault.sh  create-immich-api-key-op-item.sh  create-line-bot-op-item.sh  delete-immich-b2-backup-op-item.sh  deploy-immich.sh  deploy.yml  fix-markdown-tables.py  generate-country-lookup.py  lint-all.sh  lint-changed-files.sh  lint-photo-sync-py.sh  mac-library-backup-dry-run.sh  mac-library-backup-rsync.sh  release-tekton-build.sh  sync-op-items-infra-platform.sh  verify-line-bot-deploy.sh
(+329 files in other folders)
